add fronzenlake debug

--- a/.env_template
+++ b/.env_template
@@ -1,5 +1,5 @@
 # check if symbolic links exist, if not create them
-# BLOB_DIR=/datadrive_a/linjie/blob/vigstandard_data_2/linjli/debug_output/UW
+# BLOB_DIR=/blob
 
 # [ -L ./pretrained ] || ln -s ${BLOB_DIR}/mahtab/Umolmo/pretrained/ ./pretrained
 # [ -L ./checkpoints ] || ln -s ${BLOB_DIR}/mahtab/Umolmo/checkpoints/ ./checkpoints
@@ -9,7 +9,7 @@
 export AZFUSE_CLOUD_FUSE_CONFIG_FILE=./aux_data/configs/azfuse.yaml
 export AZFUSE_USE_FUSE=1
 export MOLMO_DATA_DIR=./Data
-export HF_HOME=/datadrive_a/linjie/blob/vigstandard_data_2/xiyin1wu2_maskrcnn/data/models/
+export HF_HOME=/models/
 export OUTPUT_DIR=./checkpoints
 #export current path to PYTHONPATH
 export PYTHONPATH=$(pwd):$PYTHONPATH
